alter js, css to prevent onload flickering

--- a/style.scss
+++ b/style.scss
@@ -5,8 +5,7 @@ html, body {
 }
 
 body {
-  // opacity:0;
-  transition: 0.3s ease-in;
+  opacity: 0;
 }
 
 div {
